# agent-evals

./: .gitignore  README.md  metrics.md  pyproject.toml
configs/: _template.yaml  support_agent.yaml  support_agent_redteam.yaml
datasets/: golden_support.jsonl  redteam_support.jsonl
src/agent_evals/: __init__.py  baselines.py  chaos.py  cli.py  online.py  report.py  runner.py  testing.py
src/agent_evals/core/: cache.py  config.py  evaluator.py  feedback.py  judge.py  langfuse_client.py  langsmith_client.py  redaction.py  rubrics.py  schemas.py  stats.py  store.py
src/agent_evals/core/adapters/: __init__.py  base.py  langfuse_generic.py  langsmith_generic.py
src/agent_evals/evaluators/: __init__.py
src/agent_evals/evaluators/deterministic/: exact_match.py  json_schema_valid.py  label_match.py  thresholds.py  tool_called.py
src/agent_evals/evaluators/llm_judge/: goal_success.py
src/agent_evals/evaluators/safety/: forbidden_content.py
src/agent_evals/evaluators/trajectory/: efficiency.py  recovery.py  tool_selection.py
src/agent_evals/examples/: demo_agent.py
src/agent_evals/pipelines/: __init__.py  activities.py  bq_export.py  client.py  worker.py  workflows.py
tests/: conftest.py  test_adapter.py  test_baseline.py  test_cache.py  test_deterministic.py  test_evaluators.py  test_judges.py  test_online.py  test_pipeline_engine.py  test_redaction.py  test_redteam.py  test_replay.py  test_resilience.py  test_rubrics.py  test_runner.py  test_stats.py  test_store.py  test_trajectory.py
