[project]
name = "agent-evals"
version = "0.4.0"
description = "Reusable eval harness for AI agents — Langfuse as system of record, multi-provider LLM judges, pass^k offline runner (Phase 0 vertical slice)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "jsonschema>=4",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.50"]
langsmith = ["langsmith>=0.1"]
anthropic = ["anthropic>=0.40"]
temporal = ["temporalio>=1.5"]
dev = ["pytest>=8"]

[project.scripts]
evals = "agent_evals.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
